--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-paged-table",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "react table with in memory paging",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test"
+    "test": "mocha ./test",
+    "build": "jsx -x jsx lib/ dist/"
   },
   "keywords": [
     "react",
@@ -14,6 +15,12 @@
   "author": "Christopher Gillis",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.11.2"
+    "react": "^0.11.2",
+    "react-tools": "^0.11.2"
+  },
+  "devDependencies": {
+    "browserify": "^5.12.0",
+    "jsx": "^0.9.89",
+    "reactify": "^0.14.0"
   }
 }
